# mini-alive

./: Cargo.toml  README.md
demo/: pop.ll  pop_cursed.ll  pop_cursed2.ll
docs/: grammar.bnf  llvm_ir_subset.bnf  smt-lib.bnf
src/: arena.rs  lib.rs  main.rs  util.rs
src/smt/: ir.rs  mod.rs  z3.rs
src/smt/smtlib/: lower.rs  mod.rs  pretty.rs  sexp.rs  token.rs
src/syntax/: ast.rs  build.rs  error.rs  func.rs  inst.rs  lex.rs  mod.rs  parse.rs  scan.rs  source.rs  tests.rs  value.rs
tests/: parse.rs
